feat[jwt] 重构login-jwt-middleware
