# docs/swagger.json
@@ -32,21 +32,12 @@
                 "summary": "User Login",
                 "parameters": [
                     {
-                        "description": "用户名",
-                        "name": "userAccount",
+                        "description": "登录请求参数",
+                        "name": "loginRequest",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "description": "密码",
-                        "name": "userPassword",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/requests.UserLoginRequest"
                         }
                     }
                 ],
@@ -54,7 +45,7 @@
                     "0": {
                         "description": "成功",
                         "schema": {
-                            "$ref": "#/definitions/models.User"
+                            "$ref": "#/definitions/session.Session"
                         }
                     },
                     "40002": {
@@ -86,30 +77,12 @@
                 "summary": "User Register",
                 "parameters": [
                     {
-                        "description": "用户名",
-                        "name": "userAccount",
+                        "description": "注册请求参数",
+                        "name": "registerRequest",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "description": "密码",
-                        "name": "userPassword",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "description": "检查密码",
-                        "name": "checkPassword",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/requests.UserRegisterRequest"
                         }
                     }
                 ],
@@ -140,9 +113,6 @@
         "models.User": {
             "type": "object",
             "properties": {
-                "UserRole": {
-                    "type": "string"
-                },
                 "createTime": {
                     "description": "创建时间",
                     "type": "string"
@@ -166,6 +136,9 @@
                 },
                 "userPassword": {
                     "type": "string"
+                },
+                "userRole": {
+                    "type": "string"
                 }
             }
         },
@@ -178,6 +151,42 @@
                 "data": {},
                 "msg": {
                     "type": "string"
+                }
+            }
+        },
+        "requests.UserLoginRequest": {
+            "type": "object",
+            "properties": {
+                "userAccount": {
+                    "type": "string"
+                },
+                "userPassword": {
+                    "type": "string"
+                }
+            }
+        },
+        "requests.UserRegisterRequest": {
+            "type": "object",
+            "properties": {
+                "checkPassword": {
+                    "type": "string"
+                },
+                "userAccount": {
+                    "type": "string"
+                },
+                "userPassword": {
+                    "type": "string"
+                }
+            }
+        },
+        "session.Session": {
+            "type": "object",
+            "properties": {
+                "sessionID": {
+                    "type": "string"
+                },
+                "userInfo": {
+                    "$ref": "#/definitions/models.User"
                 }
             }
         }
